--- a/html/confirmation.html
+++ b/html/confirmation.html
@@ -86,7 +86,7 @@
       </div>
     </div>
   </footer>
-  <script src="../js/confirmation.js"></script>
+  <script type="module" src="../js/confirmation.js"></script>
 </body>
 
 </html>
