--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
     rel="stylesheet">
   <link href="../css/style.css" rel="stylesheet" />
 
+  <script type="module" src="../js/script.js"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -92,7 +93,6 @@
       </div>
     </div>
   </footer>
-  <script src="../js/script.js"></script>
 </body>
 
 </html>
